--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   background-color: #1f2026;
   color: #b9b9b9;
 }
+body::selection {
+  background-color: #b9b9b9;
+  color: #1f2026;
+}
 .intro-sections {
   height: 100vh;
   padding: 20px 60px;
